apps/home/scribblers/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scribblers
  namespace: default
  annotations:
    gethomepage.dev/href: "https://scribble.cloud.obara.xyz"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Scribble.Rs"
    gethomepage.dev/description: "online tools to simplify everyday tasks"
    gethomepage.dev/group: "Games"
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - scribble.cloud.obara.xyz
  rules:
    - backendRefs:
        - name: scribblers
          port: 8080
